Minor Changes
Just some changes, optimization and removing debugging features